deployments/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-ops
  labels:
    app: cloud-ops
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cloud-ops
  template:
    metadata:
      labels:
        app: cloud-ops
    spec:
      containers:
      - name: cloud-ops
        image: skylabworld/cloud-ops
        ports:
        - containerPort: 8080
