deployments/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud-ops
spec:
  selector:
    app: cloud-ops
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
